# blvm

./: .dockerignore  .gitignore  .hermes.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NAMING_POLICY.md  README.md  README_VALIDATION.md  RELEASE_SET.md  SECURITY.md  bllvm.toml.example  blvm-mainnet-core.toml.example  blvm-mainnet-ibd.toml.example  blvm.toml.example  build-local.sh  build.sh  docker-compose.build.yml  versions.toml
.cargo/: audit.toml  config.toml  config.toml.example
.github/actions/develop-resolve-test/: action.yml
.github/workflows/: build-all.yml  build-single.yml  build_docker.yml  build_lib.yml  build_lib_cached.yml  ci.yml  cleanup-runner-disk.yml  coverage.yml  nightly-prerelease.yml  prerelease.yml  provision-spot-runner.yml  release.yml  release_orchestrator.yml  release_prod.yml  verify-versions.yml  verify_consensus.yml  verify_consensus_cached.yml
ci-stubs/sha2-asm/: Cargo.toml
ci-stubs/sha2-asm/src/: lib.rs
docs/: ARCHITECTURE_OBJECTION_RESPONSES.md  BTC_VERIFIED_COMPARISON.md  BTC_VERIFIED_LESSONS_PLAN.md  BUILD_SYSTEM.md  COMMONS_WEBSITE_IMPROVEMENT_PLAN.md  COMPREHENSIVE_VALIDATION_REPORT.md  DEVELOP_CHANNEL_GO_LIVE.md  DEVELOP_CHANNEL_PLAN.md  DEVELOP_NIGHTLY_RELEASE_PLAN.md  MAINNET_IBD_ONBOARDING_PLAN.md  MAINNET_IBD_UX_PLAN.md  OFFICIAL_RELEASE_PIPELINE.md  PRODUCTION_RELEASE_SYSTEM.md  README.md  RELEASE_OPTIMIZATION.md  RELEASE_PROCESS.md  RELEASE_SYSTEM_COMPLETE.md  RELEASE_SYSTEM_VALIDATION.md  RELEASE_VALIDATION_COMPLETE.md  RELEASE_VALIDATION_REPORT.md  RELEASE_VALIDATION_TEST_PLAN.md  REPOSITORY_ARCHITECTURE_ADR.md  STRATUM_V2_DECOUPLING_PLAN.md  VALIDATION_RESULTS.md  WORKFLOW_AUDIT_AND_CONSOLIDATION.md
docs/guides/: QUICK_START.md
docs/runner/: PERFORMANCE_OPTIMIZATION.md  REMOVE_SCCACHE.md
docs/security/: CONSTANT_TIME_COVERAGE.md
docs/testing/: TEST_SEEDS.md
docs/workflows/: WORKFLOW_METHODOLOGY.md
ops/: RUNNER_FLEET.md
ops/aws/: BENCHMARK_SUPPORT.md  IMPLEMENTATION_PLAN.md  PLAN_VALIDATION.md  README.md
ops/aws/packer/: kani-runner-ami.pkr.hcl
ops/aws/user-data/: kani-runner-userdata.sh
registry/: modules.json
scripts/: README.md  README_WORKFLOW_LOGS.md  bootstrap-develop-branches.sh  build-release-chain.sh  bump-release-set.py  bump-release-set.sh  check-workflow-status.sh  ci-build-aarch64.sh  ci-build-governance-bins.sh  ci-develop-scripts-dir.sh  ci-healer.sh  ci-nightly-artifacts.sh  ci-portable-cross-features.sh  ci-publish-develop-sdk.sh  ci-publish-develop.sh  ci-release-extra-artifacts.sh  ci-wait-develop-set.sh  collect-artifacts.sh  compute-develop-version.sh  create-release.sh  determine-build-requirements.sh  develop-channel-smoke-local.sh  develop-release-set.txt  download-workflow-logs.sh  generate-component-manifest.sh  generate-integration-manifest.sh  package-arch.sh  package-deb.sh  package-linux-releases.sh  package-rpm-from-deb.sh  rebuild-for-release.sh  resolve-develop-registry-deps.py  resolve-develop-registry-deps.sh  runner-status.sh  setup-build-env.sh  sign-release.sh  start-ibd-mainnet.sh  start-mainnet-from-core.sh  update-versions-develop-metadata.py  validate-release-dependencies.sh  (+2 more)
src/: lib.rs  versions.rs
templates/: RELEASE.md  SECURITY.md
templates/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
templates/devcontainer/consensus-proof/: devcontainer.json
templates/devcontainer/protocol-engine/: devcontainer.json
templates/devcontainer/reference-node/: devcontainer.json
templates/governance-app/.github/workflows/: deploy.yml
tests/: build_order.rs  cli_parsing.rs  config_loading.rs  network_rpc_defaults.rs  subcommands.rs  versions_parsing.rs
tools/: bootstrap_runner.sh  build_release_set.sh  dev  make_verification_bundle.sh  run_phase.sh  run_suite.sh
