[package]
name = "blvm"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLVM - Bitcoin Low-Level Virtual Machine node binary"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "node", "blockchain", "cryptocurrency", "p2p"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.82"

[lib]
name = "blvm"
path = "src/lib.rs"

[[bin]]
name = "blvm"
path = "src/bin/main.rs"

[dependencies]
blvm-node = "0.1.0"
clap = { version = "=4.4.11", features = ["derive"] }
tokio = { version = "=1.48.0", features = ["full", "rt-multi-thread", "signal"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
anyhow = "=1.0.93"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.108"
reqwest = { version = "0.12", features = ["json"], default-features = false }

# Local development: Use [patch.crates-io] to override with local paths
# For production/CI, these patches are removed and crates.io versions are used
[patch.crates-io]
blvm-node = { path = "../blvm-node" }
blvm-protocol = { path = "../blvm-protocol" }
blvm-consensus = { path = "../blvm-consensus" }

[features]
default = ["blvm-node/rocksdb"]
# Production optimizations (enables blvm-node production features)
production = ["blvm-node/production"]
# Profiling: IBD_PROFILE, IBD_BLOCKED_LOG, PERF, BATCH
profile = ["blvm-node/profile"]
# Experimental features (passed through from blvm-node)
utxo-commitments = ["blvm-node/utxo-commitments"]
dandelion = ["blvm-node/dandelion"]
stratum-v2 = ["blvm-node/stratum-v2"]
bip158 = ["blvm-node/bip158"]
sigop = ["blvm-node/sigop"]
# CTV (CheckTemplateVerify) - passed through from blvm-consensus via blvm-protocol and blvm-node
ctv = ["blvm-node/ctv"]
# Iroh transport support
iroh = ["blvm-node/iroh"]

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = false        # off: fastest iteration; use thin/fat for production/CI
codegen-units = 256  # max parallelism
strip = true
panic = "abort"

# IBD profiling: MUST use same codegen as release to avoid block 546 consensus divergence.
# release-perf with debug=0/strip=false caused "Invalid script at transaction 1" — different codegen.
# Use release profile for profile builds; binary still outputs to target/release-perf/.
[profile.release-perf]
inherits = "release"

# Faster builds for profile iteration (BLVM_FAST_BUILD=1): thin LTO, parallel codegen
[profile.release-perf-fast]
inherits = "release"
debug = 1
strip = false
lto = "thin"
codegen-units = 16

# Fast release: opt-level 2 ~2-3x faster compile, ~5-10% slower runtime. Use for iteration.
[profile.release-fast]
inherits = "release"
opt-level = 2