[package]
name = "blvm"
version = "0.1.0"
edition = "2024"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLVM - Bitcoin Low-Level Virtual Machine node binary"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "node", "blockchain", "cryptocurrency", "p2p"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.85"

[lib]
name = "blvm"
path = "src/lib.rs"

[[bin]]
name = "blvm"
path = "src/bin/main.rs"

[dependencies]
# default-features = false on blvm-node: feature set is listed explicitly in [features].default (includes `governance` for module bootstrap).
blvm-node = { version = ">=0.1, <1", default-features = false }
blvm-sdk = { version = ">=0.1, <1", optional = true, features = ["wasm-modules"] }
clap = { version = "=4.4.11", features = ["derive"] }
tokio = { version = "=1.48.0", features = ["full", "rt-multi-thread", "signal"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
anyhow = "=1.0.93"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.133"
reqwest = { version = "0.12", features = ["json"], default-features = false }
hex = "0.4"
# Pin ed25519 + pkcs8: iroh 0.95 → ed25519-dalek 3.0.0-pre.1 → ed25519 =3.0.0-rc.4
# → pkcs8 ^0.11.0-rc.10.  pkcs8 0.11.0 stable changed KeyMalformed to a tuple
# variant which breaks ed25519-rc.4; pkcs8 0.11.0-rc.10 doesn't compile on
# rustc ≥1.95.  rc.11 is the only version in the range that compiles cleanly.
# Remove both pins once iroh ships with a stable ed25519-dalek.
ed25519 = "=3.0.0-rc.4"
pkcs8 = "=0.11.0-rc.11"
# RUSTSEC-2026-0009: iroh/rcgen pull time 0.3.45; force patched release (strip-patch CI has no blvm-node git patch).
time = { version = ">=0.3.47", default-features = false }

# Local monorepo: use sibling checkouts instead of crates.io (omit this file on CI if you need a pure registry build).
[patch.crates-io]
blvm-primitives = { path = "../blvm-primitives" }
blvm-protocol = { path = "../blvm-protocol" }
blvm-consensus = { path = "../blvm-consensus" }
blvm-secp256k1 = { path = "../blvm-secp256k1" }
blvm-spec-lock = { path = "../blvm-spec-lock" }
blvm-muhash = { path = "../blvm-muhash" }
blvm-node = { path = "../blvm-node" }
blvm-sdk = { path = "../blvm-sdk" }

[features]
default = [
    "blvm-node/sysinfo",
    "heed3",
    "rocksdb",
    "blvm-node/redb",
    "blvm-node/nix",
    "blvm-node/libc",
    "blvm-node/production",
    "blvm-node/protocol-verification",
    "blvm-node/utxo-commitments",
    "blvm-node/iroh",
    "blvm-node/sigop",
    "blvm-node/dandelion",
    "blvm-node/rest-api",
    "blvm-node/bip70-http",
    "blvm-node/compression",
    "governance",
]
# Production optimizations (enables blvm-node production features)
production = ["blvm-node/production"]
# RocksDB storage backend (Linux/macOS only — not available for Windows cross-compile)
rocksdb = ["blvm-node/rocksdb"]
# Sled embedded storage backend (cross-platform)
sled = ["blvm-node/sled"]
# Redb embedded storage backend (cross-platform)
redb = ["blvm-node/redb"]
# heed3 / LMDB (MVCC mmap store; requires liblmdb)
heed3 = ["blvm-node/heed3"]
# Profiling: IBD_PROFILE, IBD_BLOCKED_LOG, PERF, BATCH
profile = ["blvm-node/profile"]
# Experimental features (passed through from blvm-node)
utxo-commitments = ["blvm-node/utxo-commitments"]
governance = ["blvm-node/governance"]
dandelion = ["blvm-node/dandelion"]
stratum-v2 = ["blvm-node/stratum-v2"]
sigop = ["blvm-node/sigop"]
# CTV (CheckTemplateVerify) - passed through from blvm-consensus via blvm-protocol and blvm-node
ctv = ["blvm-node/ctv"]
# Iroh transport support
iroh = ["blvm-node/iroh"]
# Quinn QUIC (alongside iroh); used where `cfg(any(feature = "quinn", feature = "iroh"))`
quinn = ["blvm-node/quinn"]
# REST API + BIP70 HTTP payment protocol (bip70-http implies rest-api in blvm-node)
rest-api = ["blvm-node/rest-api"]
bip70-http = ["blvm-node/bip70-http"]
# Block/witness/UTXO zstd + index blob compression (blvm default features; omitted from portable aarch64/Windows release CI)
compression = ["blvm-node/compression"]
# Miniscript: descriptor / policy parsing
# Descriptor / miniscript RPCs: use the `blvm-miniscript` module (no blvm-node feature).
miniscript = []
# Filesystem watcher (`notify`) for modules dir: reload / pick up modules when files change (see blvm-node `ModuleWatcher`)
module-watcher = ["blvm-node/module-watcher"]
# WASM modules: inject blvm-sdk loader into node
wasm-modules = ["dep:blvm-sdk", "blvm-node/wasm-modules"]
[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

# Consensus-canonical binaries: prefer `[profile.release]` for builds you distribute.
# Extra profiles (`release-fast`, `release-perf`, `release-perf-fast`, `release-pgo`) exist for faster
# compiles, profiling, or PGO — CI commonly uses `release-fast` for iteration. Older codegen-specific
# divergences have been fixed; still validate materially new rustc/profile combinations against the usual
# consensus gates (differential tests, release-vs-matrix checks) before treating artifacts as canonical.
#
[profile.release]
opt-level = 3
lto = false        # off: fastest iteration; distributors should use lto = "thin" or "fat"
codegen-units = 256  # max parallelism
strip = true
panic = "abort"

# Same optimization defaults as `release`; use `cargo build --profile release-perf` so binaries land in
# `target/release-perf/` (e.g. IBD instrumentation without changing opt-level).
[profile.release-perf]
inherits = "release"

# Faster builds for profile iteration (BLVM_FAST_BUILD=1): thin LTO, parallel codegen
[profile.release-perf-fast]
inherits = "release"
debug = 1
strip = false
lto = "thin"
codegen-units = 16

# Fast release: opt-level 2 ~2-3x faster compile, ~5-10% slower runtime. Use for iteration.
[profile.release-fast]
inherits = "release"
opt-level = 2

# PGO final link (scripts/pgo-ibd-build.sh): thin LTO + single codegen unit.
# Do not pass `-C lto` via RUSTFLAGS while `[profile.release]` has lto=false — Cargo
# uses embed-bitcode=no for deps and rustc rejects lto+no-bitcode.
[profile.release-pgo]
inherits = "release"
lto = "thin"
codegen-units = 1

[package.metadata.deb]
maintainer = "Bitcoin Commons Team <team@btcdecoded.org>"
section = "net"
priority = "optional"
extended-description = """\
Bitcoin Commons BLVM is a Bitcoin Low-Level Virtual Machine node binary.
It provides a full Bitcoin node with module system support, RPC interface,
and cross-transport networking (TCP, QUIC/Iroh)."""
assets = [
  ["target/release/blvm", "usr/bin/blvm", "755"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/blvm", dest = "/usr/bin/blvm", mode = "0755" },
]